# wordle

./: .pre-commit-config.yaml  README.md  app.py  corpus.ipynb  environment.yml  play.ipynb  pyproject.toml  utils.py  wordle.py  words.txt
