[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "wordle"
version = "0.1.0"
description = "Wordle App"
authors = ["Brandon Williams <bwilliams9@pm.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
marimo = "^0.2.13"
nltk = "^3.8.1"
numpy = "^1.26.4"
emoji = "^2.10.1"
watchdog = "^4.0.0"
ipykernel = "^6.29.3"
dash = "^2.16.1"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
mypy = "^1.8.0"
ipykernel = "^6.29.3"
rich = "^13.7.1"
pre-commit = "^3.6.2"
pip = "^24.0"
ruff = "^0.5.1"
types-emoji = "^2.1.0.3"

[tool.mypy]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "emoji.*"
ignore_missing_imports = true

[tool.ruff]
exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

target-version = "py312"
line-length = 99
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
docstring-code-format = true
docstring-code-line-length = "dynamic"
